<resources>
    <string name="app_name">Risks of security authorisations</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Risks of security authorisations</string>
    <string name="permissions">Dangerous permissions</string>
    <string name="about_app">About app</string>
    <string name="settings">SETTINGS</string>
    <string name="logo">UTKO logo</string>
    <string name="dialog_title">Notice for users</string>
    <string name="dialog_message">The application will use your personal and private data to demonstrate security risks.\n \nConfirm if you agree, if not, the application will shut down automatically.  </string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="server_dialog_title">Notice for users</string>
    <string name="server_dialog_message">
        The application needs for security risk demonstration a connection to the server.\n
        Make sure you are connected to the Internet and that you have set the correct server address.\n
        You can also choose an offline example that shows which data would be sent to the server.
    </string>
    <string name="server_dialog_yes">Settings</string>
    <string name="server_dialog_neutral">Offline mode</string>
    <string name="server_dialog_no">Cancel</string>
    <string name="IP_settings">IP SETTINGS</string>
    <string name="actual_IP_text">ACTUAL IP ADDRESS</string>
    <string name="actual_IP_setting">192.168.56.1</string>
    <string name="change_setting">Change</string>
    <string name="refresh_setting">Refresh</string>
    <string name="state_setting">STATE</string>
    <string name="state_unreachable_setting">Unavailable</string>
    <string name="state_reachable_setting">Available</string>
    <string name="state_connecting_setting">Connecting</string>
    <string name="language_settings">LANGUAGE SETTINGS</string>
    <string name="actual_language_text">ACTUAL LANGUAGE</string>
    <string name="actual_language_setting">English</string>
    <string name="set_dialog_title">Server address settings</string>
    <string name="set_dialog_hint">New server address</string>
    <string name="set_dialog_set">Set</string>
    <string name="set_dialog_exit">Cancel</string>
    <string name="invalid_address">Invalid URL</string>
    <string name="own_address">Own address</string>
    <string name="connection_ok">Connection OK</string>
    <string name="connection_bad">No connection</string>
    <string name="set_dialog_l_title">Language settings</string>
    <string name="language_english">English</string>
    <string name="language_czech">Czech</string>
    <string name="permision_title">Dangerous permissions</string>
    <string name="sms_permision">Access to SMS</string>
    <string name="calendar_permision">Access to calendar</string>
    <string name="contacts_permision">Access to contacts</string>
    <string name="calllog_permision">Access to call logs</string>
    <string name="location_permision">Access to location</string>
    <string name="camera_permision">Access to Camera</string>
    <string name="storage_permission">Access to storage</string>
    <string name="phone_permission">Access to SIM card</string>
    <string name="sms">SMS</string>
    <string name="calendar">Calendar events</string>
    <string name="contacts">Contacts</string>
    <string name="calllog">Call logs</string>
    <string name="location">Location</string>
    <string name="camera">Camera</string>
    <string name="storage">External storage</string>
    <string name="phone">SIM card</string>
    <string name="permission_granted">permission granted</string>
    <string name="permission_not_granted">permission not granted</string>
    <string name="permission_function_dialog_message">Permission to access %1$s is required for a practical example.</string>
    <string name="permission_function_dialog_title">Request for permission</string>
    <string name="permission_function_dialog_settings">Settings</string>
    <string name="permission_function_dialog_cancel">Cancel</string>
    <string name="permission_function_dialog_toast">The practical example cannot be launched </string>
    <string name="sms_received">Received</string>
    <string name="sms_sent">Sent</string>
    <string name="call_log_incoming">Incoming</string>
    <string name="call_log_outgoing">Outgoing</string>
    <string name="call_log_missed">Missed</string>
    <string name="unknown">Unknown</string>
    <string name="example_button">Practical example</string>
    <string name="example_text">" ID: sms PASSWORD: xxxxxx "</string>
    <string name="theory_button">Theory</string>
    <string name="id">ID: %1$s</string>
    <string name="password">PASSWORD: %1$s</string>
    <string name="refresh">Refresh</string>
    <string name="progres_bar_text">Trying to connect to server…</string>
    <string name="example_off_text">Example of abuse %1$s permission</string>
    <string name="back_to_theory">If you want to go back, press the button "Theory"</string>
    <string name="sms_title">SMS message </string>
    <string name="sms_date">Date: </string>
    <string name="sms_number">Phone: </string>
    <string name="sms_text">Text: </string>
    <string name="sms_type">Type: </string>
    <string name="contact_title">Contact</string>
    <string name="contact_name">Name: </string>
    <string name="contact_number">Phone: </string>
    <string name="calendar_event">Event</string>
    <string name="calendar_title">Title: </string>
    <string name="calendar_startDate">Start date: </string>
    <string name="calendar_endDate">End date: </string>
    <string name="calendar_description">Description: </string>
    <string name="call_log_title">CallLog </string>
    <string name="call_log_number">Number: </string>
    <string name="call_log_date">Date: </string>
    <string name="call_log_duration">Duration: </string>
    <string name="call_log_type">Type: </string>
    <string name="storage_title">Image from external storage</string>
    <string name="storage_id">ID: </string>
    <string name="storage_name">Name: </string>
    <string name="storage_date">Date: </string>
    <string name="storage_image_description">Image from external storage</string>
    <string name="phone_state_title">Information from SIM card</string>
    <string name="phone_state_number">Number: </string>
    <string name="phone_state_network_type">Network type: </string>
    <string name="phone_state_operator">Operator: </string>
    <string name="location_title">Last known location</string>
    <string name="location_latitude">Latitude: </string>
    <string name="location_longitude">Longitude: </string>
    <string name="location_accuracy">Accuracy: </string>
    <string name="location_altitude">Altitude:</string>
    <string name="camera_title">Camera title</string>
    <string name="camera_image_description">Shot from front camera</string>
    <string name="none_title">No data is available for this mobile permission abuse example</string>
    <string name="none_text">No data text</string>
    <string name="sms_theory">
            <![CDATA[
                <h2 style="text-align: center;">Permission to access SMS</h2>
                <p>The permission gives the application the possibility to:</p>
                <ul>
                <li>Receive SMS and process them in the background</li>
                <li>Receive MMS and WAP messages</li>
                <li>Read received and sent SMS</li>
                <li>Send SMS</li>
                </ul>
                <p><strong>A practical example</strong></p>
                <ul>
                <li>Demonstration of abuse of a given permission, specifically read SMS messages</li>
                <li>You must have Internet access and allow the permission</li>
                </ul>
            ]]>
        </string>
    <string name="contact_theory">
           <![CDATA[
                <h2 style="text-align: center;">Permission to access contacts</h2>
                <p>The permission gives the application the possibility to:</p>
                <ul>
                <li>Read the users contacts data</li>
                <li>Write the users contacts data</li>
                <li>Access to the list of accounts in the Accounts Service</li>
                </ul>
                <p><strong>A practical example</strong></p>
                <ul>
                <li>Demonstration of abuse of a given permission, specifically read phone contacts</li>
                <li>You must have Internet access and allow the permission</li>
                </ul>
            ]]>
        </string>
    <string name="calllog_theory">
           <![CDATA[
                <h2 style="text-align: center;">Permission to access call logs</h2>
                <p>The permission gives the application the possibility to:</p>
                <ul>
                <li>Read the users call log</li>
                <li>Write the users call log data</li>
                </ul>
                <p><strong>A practical example</strong></p>
                <ul>
                <li>Demonstration of abuse of a given permission, specifically read call logs</li>
                <li>You must have Internet access and allow the permission</li>
                </ul>
            ]]>
        </string>
    <string name="calendar_theory">
           <![CDATA[
                <h2 style="text-align: center;">Permission to access calendar events</h2>
                <p>The permission gives the application the possibility to:</p>
                <ul>
                <li>Read the users calendar data</li>
                <li>Write the users calendar data</li>
                <li>Access to the list of accounts in the Accounts Service</li>
                </ul>
                <p><strong>A practical example</strong></p>
                <ul>
                <li>Demonstration of abuse of a given permission, specifically read calendar events</li>
                <li>You must have Internet access and allow the permission</li>
                </ul>
            ]]>
        </string>
    <string name="location_theory">
           <![CDATA[
                <h2 style="text-align: center;">Permission to get phone location</h2>
                <p>The permission gives the application the possibility to:</p>
                <ul>
                <li>Access precise location</li>
                </ul>
                <p><strong>A practical example</strong></p>
                <ul>
                <li>Demonstration of abuse of a given permission, specifically read last phone location</li>
                <li>You must have Internet access and allow the permission</li>
                </ul>
            ]]>
        </string>
    <string name="storage_theory">
           <![CDATA[
                <h2 style="text-align: center;">Permission to access to external storage</h2>
                <p>The permission gives the application the possibility to:</p>
                <ul>
                <li>Read from external storage</li>
                <li>Write to external storage</li>
                </ul>
                <p><strong>A practical example</strong></p>
                <ul>
                <li>Demonstration of abuse of a given permission, specifically read from external storage</li>
                <li>You must have Internet access and allow the permission</li>
                </ul>
            ]]>
        </string>
</resources>