<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout1"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/setLanguage_TV"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/set_dialog_l_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exitSetLanguage_BTN"
        android:layout_width="112dp"
        android:layout_height="51dp"
        android:text="@string/set_dialog_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/saveSetLanguage_BTN"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:text="@string/set_dialog_set"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/exitSetLanguage_BTN"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/exitSetLanguage_BTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setLanguage_TV">

        <RadioButton
            android:id="@+id/english_RB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_english" />

        <RadioButton
            android:id="@+id/czech_RB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_czech" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>