<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sms_title_TV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/gray"
        android:text="@string/sms_title"
        android:textAlignment="center"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_back_v1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sms_date_text_TV"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/sms_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sms_date_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sms_date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_back_v1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sms_number_text_TV"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/sms_number"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sms_number_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sms_number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_back_v1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sms_text_text_TV"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/sms_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sms_text_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sms_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_back_v1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sms_type_text_TV"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/sms_type"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sms_type_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sms_type" />
    </LinearLayout>
</LinearLayout>