<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/call_log_title_TV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background = "@color/gray"
        android:text="@string/call_log_title"
        android:textAlignment="center"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rectangle_back_v1">
        <TextView
            android:id="@+id/call_log_number_text_TV"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/call_log_number" />

        <TextView
            android:id="@+id/call_log_number_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/call_log_number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rectangle_back_v1">
        <TextView
            android:id="@+id/call_log_date_text_TV"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/call_log_date" />

        <TextView
            android:id="@+id/call_log_date_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/call_log_date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rectangle_back_v1">
        <TextView
            android:id="@+id/call_log_duration_text_TV"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/call_log_duration" />

        <TextView
            android:id="@+id/call_log_duration_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/call_log_duration" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rectangle_back_v1">
        <TextView
            android:id="@+id/call_log_type_text_TV"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/call_log_type" />

        <TextView
            android:id="@+id/call_log_type_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/call_log_type" />
    </LinearLayout>
</LinearLayout>