<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/calendar_title_TV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/gray"
        android:text="@string/calendar_event"
        android:textAlignment="center"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_back_v1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/calendar_title1_text_TV"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/calendar_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/calendar_title1_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calendar_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_back_v1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/calendar_startDate_text_TV"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/calendar_startDate"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/calendar_startDate_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calendar_startDate" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_back_v1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/calendar_endDate_text_TV"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/calendar_endDate"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/calendar_endDate_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calendar_endDate" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_back_v1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/calendar_description_text_TV"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/calendar_description"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/calendar_description_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calendar_description" />
    </LinearLayout>
</LinearLayout>