<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <Spinner
        android:id="@+id/setAddress_S"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/setAddress_ET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setAddress_TV" />

    <Button
        android:id="@+id/exitSetAdress_BTN"
        android:layout_width="112dp"
        android:layout_height="51dp"
        android:text="@string/set_dialog_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setAddress_ET" />

    <Button
        android:id="@+id/saveSetAddress_BTN"
        android:layout_width="112dp"
        android:layout_height="49dp"
        android:text="@string/set_dialog_set"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/exitSetAdress_BTN"
        app:layout_constraintTop_toBottomOf="@+id/setAddress_ET"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/setAddress_TV"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/set_dialog_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/setAddress_S"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/setAddress_ET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/set_dialog_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/exitSetAdress_BTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setAddress_S" />
</androidx.constraintlayout.widget.ConstraintLayout>